tests/errors/comprehensive/E1004_unclosed_string.ez
/*
 * Error Test: E1004 - unclosed-string
 * Expected: "unclosed string literal"
 */

do main() {
    temp s string = "this string never ends
}
